--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -7,23 +7,45 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/BaseApp.styles.css" asp-append-version="true" />
+    @await RenderSectionAsync("Head", required: false)
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">BaseApp</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 p-0">
+            <div class="m-1">
+                <a class="navbar-brand" asp-page="/Index">BaseApp</a>
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse">
+                <ul class="navbar-nav flex-grow-1 d-sm-inline-flex justify-content-end">
+                    @using Microsoft.AspNetCore.Identity
+                    @inject SignInManager<BaseApp.Data.User> signInManager
+                    @inject UserManager<BaseApp.Data.User> userManager
+
+                    @if (signInManager.IsSignedIn(User))
+                    {
+                        var user = await userManager.GetUserAsync(User);
+
+                        <li class="nav-item m-1">
+                            <a class="nav-link user-identity-link" asp-page="/Account/Settings">ようこそ、@(user?.DisplayName) さん</a>
                         </li>
-                    </ul>
-                </div>
+                        <li class="nav-item m-1">
+                            <a class="btn btn-outline-secondary" asp-page="/Account/Logout">ログアウト</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item m-1">
+                            <a class="btn btn-outline-secondary" asp-page="/Account/Login">ログイン</a>
+                        </li>
+                        <li class="nav-item m-1">
+                            <a class="btn btn-outline-secondary" asp-page="/Account/Register">登録</a>
+                        </li>
+                    }
+                </ul>
             </div>
         </nav>
     </header>
@@ -40,7 +62,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
